--- a/index.html
+++ b/index.html
@@ -1797,6 +1797,7 @@ const MAP_ID = "ebb7ca4503045feabc75b373";
 // IMPORTANTE: Substitua pelo seu Project ID do Google Cloud Platform
 // Encontre em: https://console.cloud.google.com/ → Configurações do projeto
 const GOOGLE_CLOUD_PROJECT_ID = "mapas-clientes-479801"; // ✅ Configurado!
+const GOOGLE_MAPS_API_KEY = "AIzaSyApaDb9rSw2sNTaY7fjBqmrgjWYD9xwjcU"; // API Key para Fleet Routing
 
 // ===========================
 // SISTEMA DE NOTIFICAÇÕES
@@ -1985,9 +1986,8 @@ function startLocationTracking() {
                 hideLoadingScreen();
                 showAddClientButton(); // Mostrar botão adicionar cliente
 
-                // NÃO adicionar marcadores automaticamente (deixa o mapa leve)
-                // Os marcadores serão adicionados apenas ao ativar o modo de rota
-                console.log('Mapa carregado. Marcadores serão exibidos ao calcular rota.');
+                // Adicionar marcadores de entrega após carregar o mapa
+                addDeliveryMarkers();
             } catch (error) {
                 console.error('Erro ao criar marcador:', error);
                 hideLoadingScreen();
@@ -2077,143 +2077,113 @@ function handleGeoError(error, isInitial = false) {
 // MARCADORES DE ENTREGAS
 // ===========================
 
-// ===========================
-// RENDERIZAÇÃO OTIMIZADA DE MARCADORES
-// Apenas marcadores visíveis + baseados em zoom
-// ===========================
-
-let allDeliveryPoints = []; // Cache de todos os pontos
-let visibleMarkers = []; // Marcadores atualmente renderizados
-let updateMarkersTimeout = null;
-
 function addDeliveryMarkers() {
-    console.log('🎯 Inicializando sistema de marcadores otimizado (viewport-based)');
+    console.log('Adicionando marcadores de entrega...');
 
-    // Preparar todos os pontos de entrega (apenas uma vez)
-    allDeliveryPoints = Object.entries(addressDatabase).map(([qrCode, data]) => ({
-        qrCode,
-        position: { lat: data.latitude, lng: data.longitude },
-        address: data.address
-    }));
-
-    console.log(`📍 ${allDeliveryPoints.length} pontos de entrega preparados`);
-
-    // Criar marcadores apenas quando necessário (zoom perto)
-    // Listener para atualizar marcadores quando mover/zoom o mapa
-    google.maps.event.addListener(map, 'idle', updateVisibleMarkers);
-
-    // Renderizar marcadores iniciais
-    updateVisibleMarkers();
-}
-
-// Atualizar marcadores baseado no viewport e zoom atual
-function updateVisibleMarkers() {
-    // Debounce para evitar atualizações muito frequentes
-    if (updateMarkersTimeout) {
-        clearTimeout(updateMarkersTimeout);
-    }
-
-    updateMarkersTimeout = setTimeout(() => {
-        const zoom = map.getZoom();
-        const bounds = map.getBounds();
-
-        if (!bounds) return;
-
-        // REGRA: Só mostrar marcadores quando zoom >= 14 (próximo)
-        // De longe (zoom < 14): apenas rota
-        // De perto (zoom >= 14): rota + marcadores na viewport
-        if (zoom < 14) {
-            // Zoom distante: remover todos os marcadores
-            clearVisibleMarkers();
-            console.log('🔭 Zoom distante: marcadores ocultados');
-            return;
-        }
-
-        // Zoom perto: mostrar marcadores na viewport
-        const pointsInView = allDeliveryPoints.filter(point =>
-            bounds.contains(point.position)
-        );
-
-        // Limitar quantidade para performance (máximo 30 marcadores simultâneos)
-        const pointsToShow = pointsInView.slice(0, 30);
-
-        // Verificar quais já existem e quais precisam ser criados/removidos
-        updateMarkerSet(pointsToShow);
-
-        console.log(`📍 Marcadores visíveis: ${visibleMarkers.length}/${allDeliveryPoints.length} (zoom: ${zoom.toFixed(1)})`);
-    }, 200); // Aguardar 200ms após parar de mover
-}
-
-// Atualizar conjunto de marcadores (adicionar novos, remover antigos)
-function updateMarkerSet(newPoints) {
-    const newPointsMap = new Map(newPoints.map(p => [p.qrCode, p]));
-    const currentPointsMap = new Map(visibleMarkers.map(m => [m.qrCode, m]));
-
-    // Remover marcadores que não estão mais visíveis
-    visibleMarkers = visibleMarkers.filter(marker => {
-        if (!newPointsMap.has(marker.qrCode)) {
-            // Remover do mapa
-            marker.marker.map = null;
-            return false;
-        }
-        return true;
-    });
-
-    // Adicionar novos marcadores que ainda não existem
-    newPoints.forEach(point => {
-        if (!currentPointsMap.has(point.qrCode)) {
-            createLightweightMarker(point);
+    // Limpar marcadores existentes
+    Object.values(deliveryMarkers).forEach(marker => {
+        if (marker.map) {
+            marker.map = null; // Remove do mapa
         }
     });
-}
+    deliveryMarkers = {};
 
-// Criar marcador ultra-leve (círculo SVG simples)
-function createLightweightMarker(point) {
-    // Criar círculo SVG leve (muito mais rápido que AdvancedMarkerElement com HTML)
-    const circle = new google.maps.Circle({
-        map: map,
-        center: point.position,
-        radius: 15, // 15 metros de raio (visível mas pequeno)
-        fillColor: '#ea4335',
-        fillOpacity: 0.8,
-        strokeColor: '#ffffff',
-        strokeWeight: 2,
-        strokeOpacity: 1,
-        clickable: true,
-        zIndex: 100
+    // Adicionar marcador para cada endereço no banco de dados
+    Object.entries(addressDatabase).forEach(([qrCode, data]) => {
+        const position = {
+            lat: data.latitude,
+            lng: data.longitude
+        };
+
+        // Criar elemento do marcador (pacote/caixa)
+        const markerDiv = document.createElement('div');
+        markerDiv.style.width = '30px';
+        markerDiv.style.height = '30px';
+        markerDiv.style.background = '#ea4335';
+        markerDiv.style.border = '2px solid white';
+        markerDiv.style.borderRadius = '4px';
+        markerDiv.style.boxShadow = '0 2px 6px rgba(0,0,0,0.4)';
+        markerDiv.style.display = 'flex';
+        markerDiv.style.alignItems = 'center';
+        markerDiv.style.justifyContent = 'center';
+        markerDiv.style.fontSize = '16px';
+        markerDiv.innerHTML = '📦';
+        markerDiv.style.cursor = 'pointer';
+        markerDiv.style.transition = 'transform 0.2s';
+
+        markerDiv.addEventListener('mouseenter', () => {
+            markerDiv.style.transform = 'scale(1.2)';
+        });
+        markerDiv.addEventListener('mouseleave', () => {
+            markerDiv.style.transform = 'scale(1)';
+        });
+
+        try {
+            // Criar marcador usando AdvancedMarkerElement (se disponível) ou Marker clássico
+            if (google.maps.marker && google.maps.marker.AdvancedMarkerElement) {
+                const marker = new google.maps.marker.AdvancedMarkerElement({
+                    map,
+                    position,
+                    content: markerDiv,
+                    title: data.address.split('\n')[0] // Primeira linha do endereço
+                });
+
+                // Adicionar listener de clique no marcador
+                marker.addListener('click', () => {
+                    map.setCenter(position);
+                    map.setZoom(18);
+
+                    showToast(
+                        '📦 Pacote',
+                        data.address,
+                        'info',
+                        5000
+                    );
+                });
+
+                deliveryMarkers[qrCode] = marker;
+            } else {
+                // Fallback: usar Marker clássico com ícone personalizado
+                const marker = new google.maps.Marker({
+                    map,
+                    position,
+                    title: data.address.split('\n')[0],
+                    icon: {
+                        path: google.maps.SymbolPath.CIRCLE,
+                        fillColor: '#ea4335',
+                        fillOpacity: 1,
+                        strokeColor: '#ffffff',
+                        strokeWeight: 2,
+                        scale: 10
+                    },
+                    label: {
+                        text: '📦',
+                        color: '#ffffff',
+                        fontSize: '14px'
+                    }
+                });
+
+                // Adicionar listener de clique
+                marker.addListener('click', () => {
+                    map.setCenter(position);
+                    map.setZoom(18);
+
+                    showToast(
+                        '📦 Pacote',
+                        data.address,
+                        'info',
+                        5000
+                    );
+                });
+
+                deliveryMarkers[qrCode] = marker;
+            }
+        } catch (error) {
+            console.error('Erro ao criar marcador de entrega:', error);
+        }
     });
 
-    // InfoWindow para mostrar endereço ao clicar
-    const infoWindow = new google.maps.InfoWindow({
-        content: `
-            <div style="padding: 8px; max-width: 250px;">
-                <div style="font-weight: 600; margin-bottom: 4px;">📦 Ponto de Entrega</div>
-                <div style="font-size: 13px; color: #666;">${point.address}</div>
-            </div>
-        `
-    });
-
-    // Mostrar info ao clicar
-    circle.addListener('click', () => {
-        infoWindow.setPosition(point.position);
-        infoWindow.open(map);
-    });
-
-    // Armazenar referência
-    visibleMarkers.push({
-        qrCode: point.qrCode,
-        marker: circle,
-        infoWindow: infoWindow
-    });
-}
-
-// Limpar todos os marcadores visíveis
-function clearVisibleMarkers() {
-    visibleMarkers.forEach(marker => {
-        marker.marker.map = null;
-        marker.infoWindow.close();
-    });
-    visibleMarkers = [];
+    console.log(`${Object.keys(deliveryMarkers).length} marcadores de entrega adicionados`);
 }
 
 // ===========================
@@ -2941,12 +2911,6 @@ function activateRouteMode() {
     routeMode = true;
     btnToggleRoute.classList.add('active');
 
-    // Adicionar marcadores quando ativar modo de rota (se ainda não existirem)
-    if (Object.keys(deliveryMarkers).length === 0) {
-        console.log('⚡ Adicionando marcadores de entrega...');
-        addDeliveryMarkers();
-    }
-
     // Obter posição atual do usuário
     let currentPosition;
     if (userLocationMarker) {
@@ -2989,13 +2953,9 @@ function deactivateRouteMode() {
         window.routePolylines = [];
     }
 
-    // Limpar marcadores visíveis
-    clearVisibleMarkers();
-    console.log('🗑️ Limpando rota e marcadores');
-
     showToast(
         'Modo de rota desativado',
-        'Mapa restaurado (marcadores removidos)',
+        'Marcadores de entrega restaurados',
         'info',
         2000
     );
@@ -3107,7 +3067,15 @@ async function calculateFleetRoute(origin, deliveryPoints) {
         const errorData = await response.json();
         console.error('❌ ERRO do Backend:');
         console.error('Status:', response.status);
-        console.error('Erro:', errorData);
+        console.error('Erro completo:', JSON.stringify(errorData, null, 2));
+
+        // Logar detalhes específicos se existirem
+        if (errorData.details) {
+            console.error('Detalhes do Google:', errorData.details);
+        }
+        if (errorData.requestModel) {
+            console.error('Modelo enviado:', JSON.stringify(errorData.requestModel, null, 2));
+        }
 
         showToast(
             '❌ Erro no Backend',
