--- a/index.html
+++ b/index.html
@@ -2314,6 +2314,8 @@ const inputName = document.getElementById('input-name');
 const inputPhone = document.getElementById('input-phone');
 
 let scannedAddress = '';
+let scannedQRCode = ''; // Armazena o código QR escaneado
+let scannedLatLng = null; // Armazena coordenadas do endereço escaneado
 
 // Mostrar botão após carregar o mapa
 function showAddClientButton() {
@@ -2327,16 +2329,43 @@ async function openModal() {
     modal.classList.add('active');
     document.body.style.overflow = 'hidden';
 
+    // Verificar se câmera está disponível
+    if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+        showToast(
+            'Câmera não disponível',
+            'Seu navegador não suporta acesso à câmera',
+            'error',
+            5000
+        );
+        return;
+    }
+
     // Abrir câmera automaticamente
     try {
         await startCamera();
     } catch (error) {
         console.error('Erro ao abrir câmera:', error);
+
+        let errorMessage = 'Verifique as permissões do navegador';
+
+        // Mensagens de erro mais específicas
+        if (error.name === 'NotAllowedError' || error.name === 'PermissionDeniedError') {
+            errorMessage = 'Permissão negada. Permita o acesso à câmera nas configurações do navegador.';
+        } else if (error.name === 'NotFoundError' || error.name === 'DevicesNotFoundError') {
+            errorMessage = 'Nenhuma câmera encontrada no dispositivo.';
+        } else if (error.name === 'NotReadableError' || error.name === 'TrackStartError') {
+            errorMessage = 'Câmera já está em uso por outro aplicativo.';
+        } else if (error.name === 'OverconstrainedError') {
+            errorMessage = 'Câmera não atende aos requisitos necessários.';
+        } else if (error.name === 'SecurityError') {
+            errorMessage = 'Acesso à câmera bloqueado por política de segurança.';
+        }
+
         showToast(
             'Erro ao abrir câmera',
-            'Verifique as permissões do navegador',
+            errorMessage,
             'error',
-            5000
+            7000
         );
     }
 }
@@ -2354,6 +2383,8 @@ function resetForm() {
     addressDisplay.classList.remove('active');
     addressText.textContent = '';
     scannedAddress = '';
+    scannedQRCode = '';
+    scannedLatLng = null;
     stopCamera(); // Parar câmera ao fechar modal
 }
 
@@ -2551,13 +2582,19 @@ function playBeep() {
 function handleQRCodeResult(qrData) {
     console.log('Processando QR Code:', qrData);
 
-    // Buscar endereço no banco de dados (simulado por enquanto)
-    const address = lookupAddress(qrData);
+    // Buscar endereço no banco de dados
+    const addressData = lookupAddressData(qrData);
 
-    if (address) {
-        // Endereço encontrado - mostrar no badge
-        scannedAddress = address;
-        addressText.textContent = address;
+    if (addressData) {
+        // Endereço encontrado - armazenar dados completos
+        scannedAddress = addressData.address;
+        scannedQRCode = qrData;
+        scannedLatLng = {
+            latitude: addressData.latitude,
+            longitude: addressData.longitude
+        };
+
+        addressText.textContent = addressData.address;
         addressDisplay.classList.add('active');
 
         showToast(
@@ -2569,12 +2606,15 @@ function handleQRCodeResult(qrData) {
     } else {
         // Endereço não encontrado - mostrar código
         scannedAddress = `Código QR: ${qrData} (Endereço não cadastrado)`;
+        scannedQRCode = qrData;
+        scannedLatLng = null; // Sem coordenadas
+
         addressText.textContent = scannedAddress;
         addressDisplay.classList.add('active');
 
         showToast(
             '⚠️ Endereço não cadastrado',
-            'Preencha manualmente os dados do cliente',
+            'Este QR code não está no banco de dados',
             'warning',
             4000
         );
@@ -2586,13 +2626,19 @@ function handleQRCodeResult(qrData) {
     }, 500);
 }
 
-// Buscar endereço no banco de dados
-function lookupAddress(qrCode) {
-    // Buscar endereço pelo código QR
+// Buscar dados completos do endereço no banco de dados
+function lookupAddressData(qrCode) {
+    // Buscar dados completos pelo código QR
     if (addressDatabase[qrCode]) {
-        return addressDatabase[qrCode].address;
+        return addressDatabase[qrCode];
     }
     return null;
+}
+
+// Buscar endereço no banco de dados (função legada - mantida para compatibilidade)
+function lookupAddress(qrCode) {
+    const data = lookupAddressData(qrCode);
+    return data ? data.address : null;
 }
 
 // ===========================
@@ -2602,12 +2648,19 @@ function lookupAddress(qrCode) {
 form.addEventListener('submit', async (e) => {
     e.preventDefault();
 
+    // Preparar dados do cliente
     const clientData = {
         name: inputName.value.trim(),
         phone: inputPhone.value.trim(),
         address: scannedAddress,
         created_at: new Date().toISOString()
     };
+
+    // Adicionar coordenadas se disponíveis (QR code encontrado no banco)
+    if (scannedLatLng) {
+        clientData.latitude = scannedLatLng.latitude;
+        clientData.longitude = scannedLatLng.longitude;
+    }
 
     // Validação
     if (!clientData.name) {
@@ -2828,19 +2881,28 @@ function showClientDetails(client) {
     // Fechar sidebar
     closeSidebar();
 
-    // Tentar encontrar o endereço no addressDatabase procurando pela string de endereço
     let targetPosition = null;
     let qrCodeMatch = null;
 
-    // Procurar nos dados da planilha pelo endereço do cliente
-    for (const [qrCode, data] of Object.entries(addressDatabase)) {
-        if (client.address && client.address.includes(data.address.split('\n')[0])) {
-            targetPosition = {
-                lat: data.latitude,
-                lng: data.longitude
-            };
-            qrCodeMatch = qrCode;
-            break;
+    // Prioridade 1: Usar coordenadas salvas no cliente (se disponíveis)
+    if (client.latitude && client.longitude) {
+        targetPosition = {
+            lat: client.latitude,
+            lng: client.longitude
+        };
+        console.log('Usando coordenadas do cliente:', targetPosition);
+    } else {
+        // Prioridade 2: Procurar nos dados da planilha pelo endereço do cliente
+        for (const [qrCode, data] of Object.entries(addressDatabase)) {
+            if (client.address && client.address.includes(data.address.split('\n')[0])) {
+                targetPosition = {
+                    lat: data.latitude,
+                    lng: data.longitude
+                };
+                qrCodeMatch = qrCode;
+                console.log('Coordenadas encontradas na planilha:', targetPosition);
+                break;
+            }
         }
     }
 
@@ -2849,17 +2911,38 @@ function showClientDetails(client) {
         map.setCenter(targetPosition);
         map.setZoom(18);
 
-        // Destacar o marcador correspondente
-        if (deliveryMarkers[qrCodeMatch]) {
-            const markerElement = deliveryMarkers[qrCodeMatch].content;
-            // Animação de destaque
-            markerElement.style.transform = 'scale(1.5)';
-            markerElement.style.background = '#fbbc04'; // Amarelo para destaque
+        // Destacar o marcador correspondente (apenas se estiver no modo de rota)
+        if (qrCodeMatch && deliveryMarkers[qrCodeMatch]) {
+            try {
+                // Verificar se é AdvancedMarkerElement ou Marker clássico
+                const marker = deliveryMarkers[qrCodeMatch];
 
-            setTimeout(() => {
-                markerElement.style.transform = 'scale(1)';
-                markerElement.style.background = '#ea4335'; // Voltar ao vermelho
-            }, 2000);
+                if (marker.content && marker.content.style) {
+                    // AdvancedMarkerElement
+                    const markerElement = marker.content;
+                    markerElement.style.transform = 'scale(1.5)';
+                    markerElement.style.background = '#fbbc04'; // Amarelo para destaque
+
+                    setTimeout(() => {
+                        markerElement.style.transform = 'scale(1)';
+                        markerElement.style.background = '#ea4335'; // Voltar ao vermelho
+                    }, 2000);
+                } else if (marker.setIcon) {
+                    // Marker clássico - trocar cor temporariamente
+                    const originalIcon = marker.getIcon();
+                    marker.setIcon({
+                        ...originalIcon,
+                        fillColor: '#fbbc04',
+                        scale: 12
+                    });
+
+                    setTimeout(() => {
+                        marker.setIcon(originalIcon);
+                    }, 2000);
+                }
+            } catch (error) {
+                console.warn('Erro ao destacar marcador:', error);
+            }
         }
 
         showToast(
@@ -3052,7 +3135,7 @@ async function calculateFleetRoute(origin, deliveryPoints) {
     console.log(`🚀 Chamando backend para otimizar ${deliveryPoints.length} pontos`);
     console.log(`Project ID: ${GOOGLE_CLOUD_PROJECT_ID}`);
 
-    // Chamar API serverless do backend (Vercel Function)
+    // Chamar API serverless do backend (Cloudflare Pages Function)
     const backendUrl = '/api/optimize-route';
 
     // Transformar deliveryPoints para o formato esperado pelo backend
